fixed lots of spacing issues

--- a/jojodnd.css
+++ b/jojodnd.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
     background-color: mediumslateblue;
-    min-width: 500px;
 }
 
 #page-title {
@@ -208,6 +207,10 @@ h1, h2, h3, th {
     border-radius: 30px;
 }
 
+#display.row {
+    --bs-gutter-x: 0; /* fixes width on mobile? */
+}
+
 .loading {
     display: block;
     margin-left: auto;
@@ -268,11 +271,18 @@ h1, h2, h3, th {
     .nav-item {
         border-bottom: 2px dashed black;
         text-align: left;
-        padding-left: 1rem;
     }
 
     .nav-link {
         padding: 5px;
+        font-size: 32px;
+        /* text-align: center; */
+    }
+
+    .barImg {
+        float: left;
+        margin-right: 2rem;
+        margin-bottom: 0;
     }
 
     .nav-text-break {
