--- a/main.css
+++ b/main.css
@@ -46,12 +46,13 @@ p {
 }
 
 #credit {
-    margin-top: 4rem;
+    margin-top: 1rem;
     font-size: 12px;
 }
 
 #footer {
     margin: 0;
+    margin-bottom: 1rem;
     font-size: 12px;
     text-align: center;
 }
